--- a/src/main/webapp/static/css/style-login.css
+++ b/src/main/webapp/static/css/style-login.css
@@ -1,10 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
+
+:root {
+    --bg: #0057b8;
+    --form: #ffc554;
+}
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Ubuntu", sans-serif;
 }
 
 body {
@@ -12,7 +17,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0057b8;
+    background-color: var(--bg);
 }
 
 .container {
@@ -21,7 +26,7 @@ body {
     width: 100%;
     padding: 25px;
     border-radius: 8px;
-    background-color: #ffd700;
+    background-color: var(--form);
 }
 
 .container header {
@@ -70,7 +75,6 @@ form .input-field {
     height: 100%;
     width: 100%;
     outline: none;
-    border: none;
     border-radius: 8px;
     padding: 0 15px;
     border: 1px solid #d1d1d1;
@@ -89,32 +93,7 @@ form .input-field {
     color: #919191;
     cursor: pointer;
     padding: 3px;
-}
-
-.field .error {
-    display: flex;
-    align-items: center;
-    margin-top: 6px;
-    color: #d93025;
-    font-size: 13px;
-    display: none;
-}
-
-.invalid .error {
-    display: flex;
-}
-
-.error .error-icon {
-    margin-right: 6px;
-    font-size: 15px;
-}
-
-.password-field .error {
-    align-items: flex-start;
-}
-
-.password-field .error-icon {
-    margin-top: 4px;
+    transition: all 0.2s linear;
 }
 
 .input-field button {
@@ -151,7 +130,7 @@ form .input-field {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #ffd700;
+    background-color: var(--form);
     color: #0057b8;
     padding: 0 15px;
 }
@@ -186,7 +165,7 @@ form .input-field {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-color: #ffffff;
 }
 
 .icon {
